<resources>
    <string name="app_name">Ace It! Flashcards</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="start">Start</string>
    <string name="flashcards">Flash Cards</string>
    <string name="quizzes">Quizzes</string>
    <string name="tags">Tags</string>
    <string name="hints">Hints</string>
    <string name="back">Back</string>
    <string name="save">Save</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open_hint">Open Hint</string>
    <string name="open_answer">Tap for Answer</string>
    <string name="Create_Flashcard">Create Flashcard</string>
    <string name="Create_Quiz">Create Quiz</string>
    <string name="correct_toast">Correct</string>
    <string name="incorrect_toast">Incorrect</string>
    <string name="Import">Import</string>
    <string name="add_question">Add Question</string>
    <string name="add_answer">Add Answer</string>
    <string name="add_hint">Add Hint</string>
    <string name="add_tag">Add Tags</string>
    <string name="question_hint">Enter your question here.</string>
    <string name="answer_hint">Enter your answer here.</string>
    <string name="hint_hint">Enter a hint here.</string>
    <string name="tag_hint">Enter tags separated by commas here.</string>
    <string name="question_needed">Please enter a question.</string>
    <string name="answer_needed">Please enter an answer.</string>
    <string name="quiz_select">Please select the flashcards for the quiz.</string>
    <string name="no_tags">You haven\'t made any tags.</string>
    <string name="no_quiz_name">Please enter a name for the quiz.</string>
    <string name="no_cards">Your quiz does not have any flashcards.</string>
    <string name="name_tag">Create Tag</string>
    <string name="tag_create_hint">Enter the tag name here.</string>
    <string name="quiz_name">Enter quiz name here.</string>
    <string name="num_quest">Select the number of questions you would like to see.</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="flashcard_deleted">Flashcard deleted.</string>
    <string name="tag_deleted">Tag deleted.</string>
    <string name="quiz_deleted">Quiz deleted.</string>


</resources>