<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_CreateFlashCard">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createflashcard_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="21dp"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createflashcard_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginBottom="21dp"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <ScrollView
        android:id="@+id/createflashcard_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/createflashcard_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/createflashcard_questiontext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:text="@string/add_question"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/createflashcard_questioninput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="32dp"
                android:hint="@string/question_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="80dp"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="@id/createflashcard_questiontext" />

            <TextView
                android:id="@+id/createflashcard_answertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add_answer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createflashcard_questioninput" />

            <EditText
                android:id="@+id/createflashcard_answerinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="32dp"
                android:hint="@string/answer_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="80dp"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="@id/createflashcard_answertext" />

            <TextView
                android:id="@+id/createflashcard_hinttext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:text="@string/add_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/createflashcard_hintinput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences|textMultiLine"
                android:minHeight="80dp"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="@id/createflashcard_questiontext" />

            <TextView
                android:id="@+id/createflashcard_tagtext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:text="@string/add_tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/createflashcard_taginc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp">

            </com.google.android.material.chip.ChipGroup>

            <AutoCompleteTextView
                android:id="@+id/createflashcard_taginput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="32dp"
                android:hint="@string/hint_hint"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text|textCapWords"
                android:minHeight="80dp"
                android:padding="20dp"
                app:layout_constraintTop_toTopOf="@id/createflashcard_questiontext" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>